--- a/src/main/resources/static/css/vars/global.css
+++ b/src/main/resources/static/css/vars/global.css
@@ -1,4 +1,6 @@
 :root {
     --nav-menu-height: 50px;
     --pagination-row-height: 50px;
+    --settings-block-height: 40px;
+    --spot-item-card-height: 180px;
 }
