--- a/src/main/resources/static/css/spot-list-map.css
+++ b/src/main/resources/static/css/spot-list-map.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    height: calc(100% - 50px);
+    height: calc(100% - var(--nav-menu-height));
 
     display: flex;
     flex-direction: column;
@@ -13,15 +13,14 @@ main {
 .search-block {
     display: flex;
     flex-direction: column;
-    padding: 10px;
     outline: 1px solid black;
-    height: 90px; /* сумма */
+    height: var(--settings-block-height);
     width: 100%;
 }
 
-.search-block__search {
-    height: 36px;
-}
+/*.search-block__search {*/
+/*    height: 36px;*/
+/*}*/
 
 .search-block__search .search-block__input {
     height: 100%;
@@ -32,13 +31,23 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 10px;
+    color: var(--setting-btn-color);
+}
+
+.search-block__filters,
+.search-block__sort {
+    padding: 8px;
+}
+
+.search-block__filters:hover,
+.search-block__sort:hover {
+    cursor: pointer;
 }
 
 .spots {
     position: fixed;
-    top: 90px;
-    bottom: 50px;
+    top: var(--settings-block-height);
+    bottom: var(--nav-menu-height);
     left: 0;
     right: 0;
     width: 100%;
@@ -73,7 +82,7 @@ main {
     margin-left: 10px;
     margin-right: 10px;
     width: calc(100% - 20px);
-    height: 180px;
+    height: var(--spot-item-card-height);
     padding: 8px;
     background-color: var(--spot-card-bg-color);
     color: var(--spot-card-color);
