Xmap 36 - мелкие фиксы по дизайну

--- a/src/main/resources/static/css/pagination.css
+++ b/src/main/resources/static/css/pagination.css
@@ -57,3 +57,10 @@
 .pagination-row__page-link:active {
     color: var(--pagination-row-text-color-active);
 }
+
+.pagination__element-length {
+    text-align: center;
+    color: var(--pagination-elem-length-text-color);
+    padding: 10px 0;
+    line-height: 1em;
+}
