--- a/src/main/resources/static/css/spot-list-map.css
+++ b/src/main/resources/static/css/spot-list-map.css
@@ -34,6 +34,21 @@ main {
     color: var(--setting-btn-color);
 }
 
+.search-block__sort-select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+
+    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='currentColor' d='M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.24 4.24a.75.75 0 01-1.06 0L5.21 8.27a.75.75 0 01.02-1.06z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
+    background-size: 1rem;
+
+    color: white;
+    border: 0;
+    padding: 0 2rem 0 0.75rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
 .search-block__filters:hover,
 .search-block__filters:active,
 .search-block__sort:hover,
