--- a/src/main/resources/templates/spot-list.html
+++ b/src/main/resources/templates/spot-list.html
@@ -12,6 +12,7 @@
     <script src="/js/lib/axios.min.js"></script>
     <script src="/js/fetch.js"></script>
     <script src="/js/location-util.js" defer th:if="${viewMode == 'YMAP'}"></script>
+    <script src="/js/autocomplete.js" defer></script>
     <script src="/js/ymap.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <link href="/css/spot-list-map.css" type="text/css" rel="stylesheet">
     <link href="/css/pagination.css" type="text/css" rel="stylesheet">
