--- a/src/main/resources/templates/fragments/forms/sign-in.html
+++ b/src/main/resources/templates/fragments/forms/sign-in.html
@@ -11,7 +11,7 @@
 <!--    <div th:if="${param.logout}">Вы вышли</div>-->
     <div class="input-label">
       <label for="login" class="input-label__label">Логин</label>
-      <input id="login" type="text" name="username" placeholder="rider22"
+      <input id="login" type="text" name="username" placeholder="nickname"
              autocomplete="username" class="input-label__input"/>
     </div>
     <div class="input-label">
