--- a/src/main/resources/templates/fragments/modals/filters.html
+++ b/src/main/resources/templates/fragments/modals/filters.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="modal-footer filter-modal__footer">
-        <button type="button" class="btn btn-orange" data-bs-dismiss="modal">Найти</button>
+        <button type="button" class="btn btn-orange" data-bs-dismiss="modal" id="spotFilterSearchBtnId">Найти</button>
       </div>
     </div>
   </div>
