--- a/src/main/resources/templates/fragments/modals/choice_point_on_map.html
+++ b/src/main/resources/templates/fragments/modals/choice_point_on_map.html
@@ -17,22 +17,42 @@
           <path d="M5 5L19 19M5 19L19 5" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </div>
-      <div class="modal-body map-modal__body">
-        <div id="yandex-map-id" style="width: 100%; height: 100%; margin-bottom: 1rem;"></div>
+      <div class="modal-body map-modal__body" id="mapModalBodyId">
+        <div id="yandex-map-id" style="width: 100%; margin-bottom: 1rem;"></div>
       </div>
       <div class="modal-footer map-modal__footer">
         <button type="button" class="btn btn-orange" data-bs-dismiss="modal">Сохранить</button>
       </div>
     </div>
   </div>
-  <script>
+  <script type="application/javascript">
     function setCoordinates([lat, lon]) {
       document.getElementById('[[${latInputId}]]').value = lat.toFixed(6);
       document.getElementById('[[${lonInputId}]]').value = lon.toFixed(6);
     }
+    let map = undefined;
+
+    const mapModal = document.getElementById('mapModal');
+
+
+    mapModal.addEventListener('shown.bs.modal', () => {
+      if (map) {
+
+      } else {
+        const mapModalBody = document.getElementById('mapModalBodyId');
+        const mapContainer = document.getElementById('yandex-map-id');
+        console.log(document.getElementById('mapModalBodyId').getBoundingClientRect().height);
+        mapContainer.style.height = mapModalBody.getBoundingClientRect().height + 'px';
+        //хак... max-height: 100% не позволит быть лишней высоте
+        // иначе в браузере ПК высота 0 у одного из вложенных элементов карты
+        buildMap();
+      }
+    });
   </script>
-  <script src="/js/location-util.js"></script>
-  <script src="/js/ymap-point.js" defer></script>
+  <script type="application/javascript"
+          src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
+  <script type="application/javascript" src="/js/location-util.js"></script>
+  <script type="application/javascript" src="/js/ymap-point.js" defer></script>
 </div>
 </body>
 </html>
