--- a/src/main/resources/templates/fragments/toast.html
+++ b/src/main/resources/templates/fragments/toast.html
@@ -7,11 +7,11 @@
 <body>
 <div class="toast-container position-fixed start-0 end-0 p-3" style="z-index: 9999;"
      th:fragment="liveToast (message, header)">
-    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="liveToast" class="toast hide" role="alert">
         <div class="toast-header">
 <!--            <img src="..." class="rounded me-2" alt="...">-->
             <strong class="me-auto" th:text="${header}"></strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
         </div>
         <div class="toast-body" th:text="${message}">
 
