--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -34,9 +34,7 @@
             <button th:each="imageLink,iterStat : ${spotAddingRequest.spotImageLinks()}"
                     type="button" data-bs-target="#spotImageCarouselWithIndicators"
                     th:data-bs-slide-to="${iterStat.index}"
-                    th:classappend="${iterStat.first ? 'active' : ''}"
-                    th:attr="aria-current=${iterStat.first ? 'true' : null}"
-                    th:aria-label="${'Slide ' + iterStat.index + 1}">
+                    th:classappend="${iterStat.first ? 'active' : ''}">
             </button>
         </div>
         <div class="carousel-inner">
@@ -49,13 +47,13 @@
         <button th:if="${#lists.size(spotAddingRequest.spotImageLinks()) > 1}"
                 class="carousel-control-prev" type="button"
                 data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" ></span>
             <span class="visually-hidden">Previous</span>
         </button>
         <button th:if="${#lists.size(spotAddingRequest.spotImageLinks()) > 1}"
                 class="carousel-control-next" type="button"
                 data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" ></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
