--- a/src/main/resources/static/css/vars/global.css
+++ b/src/main/resources/static/css/vars/global.css
@@ -3,4 +3,6 @@
     --pagination-row-height: 50px;
     --settings-block-height: 50px;
     --spot-item-card-height: 180px;
+    --range-input-height: 40px;
+    --range-input-width: 60px;
 }
