Xmap 36 - фиксы по фильтру

--- a/src/main/resources/templates/spot-list.html
+++ b/src/main/resources/templates/spot-list.html
@@ -11,7 +11,7 @@
             defer th:if="${viewMode == 'YMAP'}"></script>
     <script src="/js/lib/axios.min.js"></script>
     <script src="/js/fetch.js"></script>
-    <script src="/js/location-util.js" defer th:if="${viewMode == 'YMAP'}"></script>
+    <script src="/js/location-util.js"></script>
     <script src="/js/convert-util.js"></script>
     <script src="/js/spot-filter.js" defer></script>
     <script src="/js/autocomplete.js" defer></script>
