--- a/backend-api/src/main/resources/templates/layout.html
+++ b/backend-api/src/main/resources/templates/layout.html
@@ -24,7 +24,7 @@
         place for custom content
     </main>
 
-    <div th:replace="fragments/nav :: mobile-bottom-nav">
+    <div th:replace="~{fragments/nav :: mobile-bottom-nav}">
         place for custom header
     </div>
 </body>
