--- a/backend-api/src/main/resources/templates/logout.html
+++ b/backend-api/src/main/resources/templates/logout.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div layout:fragment="content">
-        <div th:replace="fragments/forms/logout :: form">
+        <div th:replace="~{fragments/forms/logout :: form}">
             place for custom logout form
         </div>
     </div>
