--- a/backend-api/src/main/resources/templates/sign-in.html
+++ b/backend-api/src/main/resources/templates/sign-in.html
@@ -10,7 +10,7 @@
 <body>
 <div layout:fragment="content" class="content">
     <h2 class="header-title">Вход</h2>
-    <form th:replace="fragments/forms/sign-in :: form">
+    <form th:replace="~{fragments/forms/sign-in :: form}">
         place for custom sign-in form
     </form>
 </div>
