--- a/ansible/roles/apache/templates/vhost.conf.j2
+++ b/ansible/roles/apache/templates/vhost.conf.j2
@@ -1,11 +1,21 @@
 <VirtualHost *:80>
+     ServerName {{ domain_name }}
+     RewriteEngine On
+     RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</VirtualHost>
+
+<VirtualHost *:443>
     ServerName {{ domain_name }}
-    DocumentRoot /var/www/{{ domain_name }}
 
-    <Directory /var/www/{{ domain_name }}>
-        Require all granted
-    </Directory>
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/{{ domain_name }}/privkey.pem
+    Include /etc/letsencrypt/options-ssl-apache.conf
 
-    ErrorLog /var/log/httpd/{{ domain_name }}_error.log
+    ProxyPreserveHost On
+    ProxyPass / http://127.0.0.1:8082/
+    ProxyPassReverse / http://127.0.0.1:8082/
+
+    ErrorLog /var/log/httpd/{{ domain_name }}_ssl_error.log
     CustomLog /var/log/httpd/{{ domain_name }}_access.log combined
 </VirtualHost>
